--- a/Apps/EmberApps/AnmeldedetailsEinlesen/App/htmlTemplates/application.html
+++ b/Apps/EmberApps/AnmeldedetailsEinlesen/App/htmlTemplates/application.html
@@ -1,6 +1,6 @@
 <div class="dialog readSubscriptionDetails">
-    <div class="dialogHeader">
+    <h1 class="dialogHeader">
         {{translate "readSubscriptionDetails"}}
-    </div>
+    </h1>
     {{outlet}}
 </div>
