Adapt stellvertretung settings #546

--- a/apps/Stellvertretung/index.html
+++ b/apps/Stellvertretung/index.html
@@ -9,6 +9,6 @@
     
   <link rel="stylesheet" href="styles.css?bust=22.2.20230420170322"><link rel="stylesheet" href="styles-notifications.css?bust=22.2.20230420170322"></head>
   <body class="standalone">
-    <substitution-app-standalone></substitution-app-standalone>
+    <substitution-app></substitution-app>
   <script src="runtime.js?bust=22.2.20230420170322" type="module"></script><script src="polyfills.js?bust=22.2.20230420170322" type="module"></script><script src="scripts.js?bust=22.2.20230420170322" defer></script><script src="vendor.js?bust=22.2.20230420170322" type="module"></script><script src="main.js?bust=22.2.20230420170322" type="module"></script></body>
 </html>
