Adapt raumreservation settings #546

--- a/apps/Raumreservation/index.html
+++ b/apps/Raumreservation/index.html
@@ -4,8 +4,8 @@
 window._RoomReservationConfig = {
 "tokenType": "urn:ietf:params:oauth:token-type:jwt-bearer",
 "webBaseUrl": "",
-"apiUrl": location.protocol + '//' + location.host + '/restApi',
-"oauthUrl": location.protocol + '//' + location.host + '/OAuth',
+"apiUrl": 'https://eventoapp-test.erz.be.ch/restApi',
+"oauthUrl": 'https://eventoapp-test.erz.be.ch/OAuth',
 "clientId": "Roomreservation",
 "instanceId": 0,
 "appScope": "NG",
@@ -28,7 +28,7 @@ window._RoomReservationConfig = {
 };
 
 </script>
-<script src="../JSModules/Raumreservation/embed.js"></script>
+<script src="embed.js"></script>
 <script>
     var root = document.getElementById('fbi-root');
     var appRoot = document.getElementsByTagName('app-root')[0];
