Adapt ember app settings #546

--- a/apps/EmberApps/AnmeldedetailsEinlesen/index.html
+++ b/apps/EmberApps/AnmeldedetailsEinlesen/index.html
@@ -1,2 +1,2 @@
 <div id="CLX_Root" class="uk-scope"></div>
-<script data-main="../Apps/EmberApps/AnmeldedetailsEinlesen/main.js" src="../Apps/EmberApps/Lib/require.js"></script>
+<script data-main=".AnmeldedetailsEinlesen/main.js" src="../Lib/require.js"></script>
