--- a/apps/EmberApps/SchulleiterPersonen/index.html
+++ b/apps/EmberApps/SchulleiterPersonen/index.html
@@ -1,3 +1,3 @@
 <div id="CLX_Root" data-search-definition="StudentWeb" class="ember-application">
 </div>
-<script data-main="../Apps/EmberApps/SchulleiterPersonen/main.js" src="../Apps/EmberApps/Lib/require.js"></script>
+<script data-main="main.js" src="../Lib/require.js"></script>
