Add resize script to all apps #546

--- a/apps/EmberApps/SchulleiterPersonen/index.html
+++ b/apps/EmberApps/SchulleiterPersonen/index.html
@@ -1,3 +1,4 @@
 <div id="CLX_Root" data-search-definition="StudentWeb" class="ember-application">
 </div>
 <script data-main="main.js" src="../Lib/require.js"></script>
+<script src="../../../src/resize.ts" type="module"></script>
