--- a/apps/EmberApps/AnmeldedetailsEinlesen/index.html
+++ b/apps/EmberApps/AnmeldedetailsEinlesen/index.html
@@ -1,2 +1,3 @@
 <div id="CLX_Root" class="uk-scope"></div>
 <script data-main=".AnmeldedetailsEinlesen/main.js" src="../Lib/require.js"></script>
+<script src="../../../src/resize.ts" type="module"></script>
