--- a/apps/Kursausschreibung/index.html
+++ b/apps/Kursausschreibung/index.html
@@ -6,7 +6,7 @@
 <!--set uiCulture in ""-->
 <script>
     const locale = localStorage.getItem('uiCulture');
-    if(!locale.includes("\"")) localStorage.setItem('uiCulture', '"'+locale+'"');
+    if(!locale.includes("\"")) localStorage.setItem('uiCulture', '"'+locale+'-CH"');
 </script>
 <!-- configuration -->
 <script src="settings.js"></script>
@@ -20,14 +20,12 @@
 
 <!-- app JS -->
 <script src="assets/app.js"></script>
-<div class="WebPart-SingleColumn">
-    <!-- MAIN APPLICATION  -->
-    <div class="uk-container uk-width-1-1">
-        <div class="uk-scope">
-            <div id="kursausschreibung-root" class="uk-container uk-width-1-1"></div>
-            <div id="kursausschreibung-loading" class="uk-scope">
-                <div uk-spinner="ratio: 2" class="centerHorizontalTop20Percent"></div> 
-            </div>
+<!-- MAIN APPLICATION  -->
+<div class="uk-container uk-width-1-1">
+    <div class="uk-scope">
+        <div id="kursausschreibung-root" class="uk-container uk-width-1-1"></div>
+        <div id="kursausschreibung-loading" class="uk-scope">
+            <div uk-spinner="ratio: 1" class="centerHorizontalTop20Percent"></div> 
         </div>
     </div>
 </div>
