--- a/Apps/Kursausschreibung/indexIntern.html
+++ b/Apps/Kursausschreibung/indexIntern.html
@@ -12,12 +12,7 @@
 <script src="settings.js"></script>
 <script src="appConfig.js"></script>
 <script>
-        var i; 
-        var niveau = []; 
-        for (i = 1; i < 2000; i++) {
-            niveau.push(i);
-        } 
-        window.kursausschreibung.settings.initialListFilters.eventLevelIds = niveau;
+    window.kursausschreibung.settings.initialListFilters.eventLevelIds = [2000,2001];
 </script>
 <!-- locale -->
 <script src="locale/de-CH.js"></script>
