WIP: Include notifications #546

--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Evento</title>
     <link rel="stylesheet" href="./src/index.css" />
+    <script src="/apps/webapp-schulverwaltung/settings.js"></script>
+    <script
+      src="/apps/webapp-schulverwaltung/runtime.js"
+      type="module"
+    ></script>
+    <script
+      src="/apps/webapp-schulverwaltung/polyfills.js"
+      type="module"
+    ></script>
+    <script src="/apps/webapp-schulverwaltung/main.js" type="module"></script>
     <script type="module" src="/src/index.ts"></script>
   </head>
   <body>
