Add public/settings.js for environment-specific settings

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Evento</title>
     <link rel="stylesheet" href="./src/index.css" />
+    <script src="/settings.js"></script>
     <script src="/apps/webapp-schulverwaltung/settings.js"></script>
     <script
       src="/apps/webapp-schulverwaltung/runtime.js"
