get settings.apiServer for modules

--- a/public/apps/Raumreservation/index.html
+++ b/public/apps/Raumreservation/index.html
@@ -5,7 +5,7 @@
 window._RoomReservationConfig = {
 "tokenType": "urn:ietf:params:oauth:token-type:jwt-bearer",
 "webBaseUrl": "",
-"apiUrl": 'https://eventoapp-test.erz.be.ch/restApi',
+"apiUrl": window.parent.eventoPortal.settings.apiServer,
 "oauthUrl": 'https://eventoapp-test.erz.be.ch/OAuth',
 "clientId": "Roomreservation",
 "instanceId": 0,
