--- a/public/apps/EmberApps/AnmeldedetailsEinlesen/index.html
+++ b/public/apps/EmberApps/AnmeldedetailsEinlesen/index.html
@@ -1,6 +1,14 @@
+<link rel="stylesheet" type="text/css" href="../CSS/main.min.css" />
+<link rel="stylesheet" type="text/css" href="../CSS/responsive.min.css" />
+<link rel="stylesheet" type="text/css" href="../CSS/Custom/anmeldedetails-einlesen.css" />
+<link rel="stylesheet" type="text/css" href="/apps/webapp-schulverwaltung/styles.css" />
+
 <div id="CLX_Root" class="uk-scope"></div>
 <script src="../../../scripts/iframe.js" type="module"></script>
-<script
-  data-main=".AnmeldedetailsEinlesen/main.js"
-  src="../Lib/require.js"
-></script>
+<script>
+      var token = localStorage.getItem('CLX.LoginToken');
+    if (!token.includes('"')){
+        localStorage.setItem('CLX.LoginToken','"'+token+'"');
+    }
+</script>
+<script data-main="./main.js" src="../Lib/require.js"></script>
