get current Lang for app Raumreservation

--- a/public/apps/Raumreservation/index.html
+++ b/public/apps/Raumreservation/index.html
@@ -25,7 +25,7 @@ window._RoomReservationConfig = {
 "qrCodeBaseUrl": "",
 "showRoomReservation": true,
 "showDeviceReservation": true,
-"language": "",
+"language": document.documentElement.lang+'-CH',
 "initialPath": location.href.search('ressourceidra=3') > 0 ? 'devices' : '',
 "ShowAvailableRoomsChecked": true,
 "DefaultTimePeriod": 45,
