get lang in Raumreservation app

--- a/public/apps/Raumreservation/index.html
+++ b/public/apps/Raumreservation/index.html
@@ -15,7 +15,7 @@ window._RoomReservationConfig = {
 "instanceId": 0,
 "appScope": "NG",
 "useAutoLogin": false,
-"useLanguageDetection": false,
+"useLanguageDetection": true,
 "debug": false,
 "availableLanguages": [
 "de-CH",
