Update app configs #536

--- a/public/apps/Noteneingabe/index.html
+++ b/public/apps/Noteneingabe/index.html
@@ -27,6 +27,6 @@
             </div>
         </section>
     </div>
-    <script data-main="./main.js" src="./Lib/require.js"></script>
+    <script data-main="main.js" src="Lib/require.js"></script>
 </body>
 </html>
