--- a/public/apps/EmberApps/Fotoliste/index.html
+++ b/public/apps/EmberApps/Fotoliste/index.html
@@ -1,2 +1,2 @@
 <div id="CLX_Root"></div>
-<script data-main="../Apps/EmberApps/Fotoliste/main.js" src="../Apps/EmberApps/Lib/require.js"></script>
+<script data-main="main.js" src="../Lib/require.js"></script>
