--- a/public/apps/Noteneingabe/index.html
+++ b/public/apps/Noteneingabe/index.html
@@ -27,6 +27,7 @@
             </div>
         </section>
     </div>
+    <script src="../../scripts/iframe.js" type="module"></script>
     <script data-main="main.js" src="Lib/require.js"></script>
 </body>
 </html>
