override styles app kursauschreibung #549

--- a/public/apps/Kursausschreibung/index.html
+++ b/public/apps/Kursausschreibung/index.html
@@ -4,7 +4,7 @@
 />
 <!-- app css-->
 <link rel="stylesheet" href="assets/app.css" />
-<link rel="stylesheet" href="assets/kursausschreibungOverwrite.css" />
+<link rel="stylesheet" href="../../styles/kursausschreibung-override.css" />
 
 <script src="../../scripts/iframe.js" type="module"></script>
 
@@ -33,7 +33,7 @@
   <div class="uk-scope">
     <div id="kursausschreibung-root" class="uk-width-1-1"></div>
     <div id="kursausschreibung-loading" class="uk-scope">
-      <div uk-spinner="ratio: 1" class="centerHorizontalTop20Percent"></div>
+      <div uk-spinner="ratio: 2" class="centerHorizontalTop20Percent"></div>
     </div>
   </div>
 </div>
