styling app anmeldedetails einlesen #549

--- a/public/apps/EmberApps/AnmeldedetailsEinlesen/index.html
+++ b/public/apps/EmberApps/AnmeldedetailsEinlesen/index.html
@@ -1,5 +1,6 @@
 <link rel="stylesheet" type="text/css" href="../CSS/main.min.css" />
 <link rel="stylesheet" type="text/css" href="../CSS/responsive.min.css" />
+<link rel="stylesheet"  type="text/css" href="/apps/webapp-schulverwaltung/styles.css">
 <link rel="stylesheet" type="text/css" href="../CSS/Custom/anmeldedetails-einlesen.css" />
 <div id="CLX_Root" class="uk-scope"></div>
 <script src="../../../scripts/iframe.js" type="module"></script>
