styling app stellvertretung #549

--- a/public/apps/Stellvertretung/index.html
+++ b/public/apps/Stellvertretung/index.html
@@ -12,6 +12,9 @@
       rel="stylesheet"
       href="styles-notifications.css?bust=22.2.20230420170322"
     />
+    <link rel="stylesheet"  type="text/css" href="/apps/webapp-schulverwaltung/styles.css">
+    <link rel="stylesheet"  type="text/css" href="../../styles/stellvertretung-override.css">
+    
   </head>
   <body class="standalone">
     <substitution-app></substitution-app>
