add style from webapp-schulverwaltung

--- a/public/apps/Raumreservation/index.html
+++ b/public/apps/Raumreservation/index.html
@@ -59,5 +59,6 @@ window._RoomReservationConfig = {
     },500);
 
 </script>
+<link rel="stylesheet"  type="text/css" href="/apps/webapp-schulverwaltung/styles.css">
 <link rel="stylesheet" href="../../styles/raumreservation-override.css" />
 
