add excel insert app to noteneingabe #595

--- a/public/apps/Noteneingabe/index.html
+++ b/public/apps/Noteneingabe/index.html
@@ -20,7 +20,9 @@
     <script src="../../scripts/iframe.js" type="module"></script>
     <script data-main="main.js" src="Lib/require.js"></script>
     <script src="../MasterExcel/jquery.min.js"></script>
+    <script src="../MasterExcel/X.js"></script>
     <script src="../../scripts/noteneingabe.js"></script>
+    <script src="../MasterExcel/load.js"></script>
     
 </body>
 </html>
