--- a/public/apps/Noteneingabe/index.html
+++ b/public/apps/Noteneingabe/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="CSS/responsive.min.css" />
     <link rel="stylesheet"  type="text/css" href="/apps/webapp-schulverwaltung/styles.css">
     <link rel="stylesheet" href="../../styles/noteneingabe-override.css" />
+    <link rel="stylesheet" href="../MasterExcel/main.css" />
 </head>
 <body>
     <div class="pageWrapper">
@@ -19,10 +20,8 @@
     </div>
     <script src="../../scripts/iframe.js" type="module"></script>
     <script data-main="main.js" src="Lib/require.js"></script>
-    <script src="../MasterExcel/jquery.min.js"></script>
-    <script src="../MasterExcel/X.js"></script>
     <script src="../../scripts/noteneingabe.js"></script>
-    <script src="../MasterExcel/load.js"></script>
+    <script src="../MasterExcel/main.js"></script>
     
 </body>
 </html>
