--- a/public/apps/Noteneingabe/App/HtmlTemplates/statistic.html
+++ b/public/apps/Noteneingabe/App/HtmlTemplates/statistic.html
@@ -1,7 +1,7 @@
 ﻿<div class="dialog">
 
     <div class="dialogBody statistics">
-        <table class="dialogInfoTable">
+        <table class="dialogInfoTable groupContainer">
             <tr>
                 <td class="dialogTitleInfo">{{model.Event.Designation}}</td>
                 <td>
@@ -26,13 +26,77 @@
             {{/each}}
         </div>
 
-
         {{#if model.hasNothingToShow}}
-        <div class="validationErrorMessage">
-            {{translate 'gradingNothingToShow'}}
-        </div>
+            <div class="validationErrorMessage">
+                {{translate 'gradingNothingToShow'}}
+            </div>
         {{/if}}
 
+        {{#if showStudentsTable}}
+            <div class="divWrapper groupContainer">
+                <div class="mobile table-options__buttons">
+                    {{#each availableColumns as |item|}}
+                        <button {{action 'setSelectedColumn' item.id}} class="{{if (eq selectedColumn item.id) 'active' ''}} option-button">{{item.label}}</button>
+                    {{/each}}
+                </div>
+
+                <table class="dialogAccordionTable editTable gradigTable">
+                    <thead>
+                        <tr>
+                            <th>{{translate 'name'}}</th>
+                            <th class="{{unless (eq selectedColumn 'grade')   'hide-column' ''}}">{{translate 'grade'}}</th>
+                            <th class="{{unless (eq selectedColumn 'comment') 'hide-column' ''}}">{{translate 'comment'}}</th>
+                            {{#each columnDetails as |columnDetail|}} 
+                                <th class="{{unless (eq selectedColumn columnDetail.VssId) 'hide-column' ''}}">
+                                    {{columnDetail.VssBezeichnung}}
+                                </th>
+                            {{/each}}
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {{#each gradingItemsPrepared as |item|}}
+                            <tr>
+                                <td style="white-space: nowrap;">{{item.name}}</td>
+                                <td class="{{unless (eq selectedColumn 'grade')   'hide-column' ''}}">{{item.grade}}</td>
+                                <td class="{{unless (eq selectedColumn 'comment') 'hide-column' ''}}">{{item.comment}}</td>
+                                {{#each item.details as |detail|}} 
+                                    <td class="{{unless (eq selectedColumn detail.VssId) 'hide-column' ''}}">
+                                        {{subscription-detail 
+                                            model=detail
+                                            showLabel=false
+                                            setReadOnly=true
+                                        }}
+                                    </td>
+                                {{/each}}
+                            </tr>
+                        {{/each}}
+                        {{#if model.IsUnregisteredStudentsEnabled}}
+                            <th colspan="99">
+                                {{translate 'unregisteredStudentsTitle'}}
+                            </th>
+                            {{#each unregisteredStudentsPrepared as |item|}}
+                                <tr>
+                                    <td style="white-space: nowrap;">{{item.name}}</td>
+                                    <td class="{{unless (eq selectedColumn 'grade')  'hide-column' ''}}">{{item.grade}}</td>
+                                    <td class="{{unless (eq selectedColumn 'comment') 'hide-column' ''}}">{{item.comment}}</td>
+                                    {{#each item.details as |detail|}} 
+                                        <td class="{{unless (eq selectedColumn detail.VssId) 'hide-column' ''}}">
+                                            {{subscription-detail 
+                                                model=detail
+                                                showLabel=false
+                                                setReadOnly=true
+                                            }}
+                                        </td>
+                                    {{/each}}
+                                </tr>
+                            {{/each}}
+                        {{/if}}
+                    </tbody>
+                </table>
+            </div>
+        {{/if}}
+
+        <h4>{{translate 'statisticTitle'}}</h4>
         <div class="divWrapper">
             <div class="infoTable">
                 <table>
@@ -55,18 +119,20 @@
             </div>
         </div>
     </div>
-
+    
     <div class="dialogFooter">
         {{#if showValidationMessage}}
-        <div class="footerValidation dialogContextMenu">{{validationMessage}}</div>
+            <div class="footerValidation dialogContextMenu">{{validationMessage}}</div>
         {{/if}}
         {{#if canProceed}}
-        <div class="buttonDiv">
-            <button type="button" class="textButton" {{action 'finish'}}>
-                <span class="material-icons">arrow_right_alt</span>
-                <div>{{finishButtonText}}</div>
-            </button>
-        </div>
+            <div class="buttonDiv">
+                <button type="button" class="textButton" {{action 'finish'}}>
+                    <span class="material-icons">arrow_right_alt</span>
+                    <div>{{finishButtonText}}</div>
+                </button>
+            </div>
+        {{else}}
+            <div class="buttonDiv"></div>
         {{/if}}
         <div class="buttonDiv">
             <button type="button" class="textButton" {{action 'back'}}>
