pwa new icon and color #62

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <link
       rel="mask-icon"
       href="/icons/maskable-icon-512x512.png"
-      color="#FFFFFF"
+      color="#3C505A"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#EA161F" />
+    <meta name="theme-color" content="#3C505A" />
     <title>Evento</title>
     <meta
       name="description"
