Workaround fix default propertys, OAuth URL for ics download

--- a/public/apps/Raumreservation/index.html
+++ b/public/apps/Raumreservation/index.html
@@ -6,7 +6,7 @@ window._RoomReservationConfig = {
 "tokenType": "urn:ietf:params:oauth:token-type:jwt-bearer",
 "webBaseUrl": "",
 "apiUrl": window.parent.eventoPortal.settings.apiServer,
-"oauthUrl": "",
+"oauthUrl": window.parent.eventoPortal.settings.oAuthServer + window.parent.eventoPortal.settings.oAuthPrefix,
 "clientId": "",
 "instanceId": null,
 "appScope": "NG",
