gem:27379 Add error column

--- a/public/apps/EmberApps/AnmeldedetailsEinlesen/App/HtmlTemplates/result.html
+++ b/public/apps/EmberApps/AnmeldedetailsEinlesen/App/HtmlTemplates/result.html
@@ -9,6 +9,7 @@
                 <th>{{translate "oldValue"}}</th>
                 <th>{{translate "newValue"}}</th>
                 <th>{{translate "status"}}</th>
+                <th>{{translate "fehler"}}</th>
             </tr>
         </thead>
         <tbody>
@@ -21,14 +22,20 @@
                 <td>{{subscriptionDetail.oldValue}}</td>
                 <td>{{subscriptionDetail.newValue}}</td>
                 <td>
-                    <div class="center-text">
-                        {{#if subscriptionDetail.uploaded}}
-                        <i class="material-icons">check_circle</i>
+                    <div>
+                        {{#if subscriptionDetail.loading}}
+                        <div class="spinner-border spinner-border-sm" role="status">
+                        </div>
                         {{else}}
-                        {{icon "loadingAnimation"}}
+                        {{#if subscriptionDetail.uploaded}}
+                        <i class="material-icons text-success">check_circle</i>
+                        {{else}}
+                        <i class="material-icons text-danger">cancel</i> <br>
+                        {{/if}}
                         {{/if}}
                     </div>
                 </td>
+                <td>{{subscriptionDetail.errorUpload}}</td>
             </tr>
             {{/unless}}
             {{/each}}
@@ -36,11 +43,17 @@
     </table>
 </div>
 <div class="dialogFooter">
-    {{#if model.everythingHasBeenSent}}
-    <i class="material-icons-outlined">info</i>{{translate "goBackToStart"}}
+    {{#if model.error}}
+    <span class="text-danger">
+        {{translate "goBackToStartError"}}
+    </span>
+    {{else}}
+    <div>
+        {{translate "goBackToStart"}}
+    </div>
     {{/if}}
     <div>
-        {{#link-to "input" tagName="button" class="btn btn-primary" disabledWhen=(if model.everythingHasBeenSent false true)}}
+        {{#link-to "input" tagName="button" class="btn btn-primary float-right" disabledWhen=(if model.everythingHasBeenSent false true)}}
             <div>{{translate "input"}}</div>
         {{/link-to}}
     </div>
