gem:27379 Button btn-secondary to btn-outline-secondary

--- a/public/apps/EmberApps/AnmeldedetailsEinlesen/App/HtmlTemplates/validation.html
+++ b/public/apps/EmberApps/AnmeldedetailsEinlesen/App/HtmlTemplates/validation.html
@@ -50,7 +50,7 @@
 </div>
 <div class="dialogFooter">
     <div class="">
-        {{#link-to "input" tagName="button" class="btn btn-secondary" disabledWhen=cannotGoBack}}
+        {{#link-to "input" tagName="button" class="btn btn-outline-secondary" disabledWhen=cannotGoBack}}
             <div>{{translate "correct"}}</div>
         {{/link-to}}
     </div>
