Adjust webapp-schulverwaltung's index.html for <bkd-app>

--- a/public/apps/webapp-schulverwaltung/index.html
+++ b/public/apps/webapp-schulverwaltung/index.html
@@ -10,7 +10,7 @@
     <base target="_parent" />
   </head>
   <body>
-    <erz-app></erz-app>
+    <bkd-app></bkd-app>
     <script src="../../scripts/iframe.js" type="module"></script>
     <script src="runtime.js" type="module"></script>
     <script src="polyfills.js" type="module"></script>
