--- a/public/apps/Kursausschreibung/index.html
+++ b/public/apps/Kursausschreibung/index.html
@@ -4,6 +4,7 @@
 />
 <!-- app css-->
 <link rel="stylesheet" href="assets/app.css" />
+<link rel="stylesheet"  type="text/css" href="/apps/webapp-schulverwaltung/styles.css">
 <link rel="stylesheet" href="../../styles/kursausschreibung-override.css" />
 
 <script src="../../scripts/iframe.js" type="module"></script>
