--- a/public/apps/Raumreservation/index.html
+++ b/public/apps/Raumreservation/index.html
@@ -25,7 +25,7 @@ window._RoomReservationConfig = {
 "initialPath": location.href.search('ressourceidra=3') > 0 ? 'devices' : '',
 "ShowAvailableRoomsChecked": true,
 "DefaultTimePeriod": 45,
-"DefaultTimeFragmentation": 5
+"DefaultTimeFragmentation": 5,
 };
 
 </script>
